--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* General body styling */
 body {
     font-family: 'Poppins', sans-serif;
-    background: url("file:///C:/Users/anasd/Downloads/image/image.jpg") no-repeat center center fixed;
+    background: url("file:///C:/Users/anasd/Desktop/Personal Fun Factor Generator/image.jpg") no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
